Fix Java warnings. Now using Java 19.